# timetable_bot

./: .flake8  .gitignore  Dockerfile  README.md  docker-compose.yml  mongo_credentials.env.local  mongo_express_credentials.env.local  pyproject.toml  redis_credentials.env.local
.github/workflows/: deploy.yml
timetable_bot/src/: .env.local  config.py  main.py  message_consts.py
timetable_bot/src/databases/: __init__.py  redis_client.py  users_mongo_client.py
timetable_bot/src/handlers/: command_handlers.py  registration_handlers.py
timetable_bot/src/keyboards/: menu_keys.py  registration_keys.py
timetable_bot/src/services/prettify_print_service/: __init__.py  prettify_print_service.py  prettify_print_utils.py
timetable_bot/src/services/timetable_service/: __init__.py  timetable_service.py  timetable_utils.py
timetable_bot/src/validators/: time_validator.py
timetable_bot/tests/database_tests/: test_client.py
timetable_bot/tests/service_tests/timetable_service_test/: test_timetable_constuction.py  test_timetable_intersection.py
