[project]
name = "telegrambot"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "aiogram (>=3.18.0,<4.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "pytest (>=8.3.5,<9.0.0)",
    "pytest-cov (>=6.0.0,<7.0.0)",
    "motor (>=3.7.0,<4.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.mypy-timetable_bot.tests]
ignore_missing_imports = true


[tool.pytest.ini_options]
pythonpath = ["timetable_bot/src"]
testpaths = ["timetable_bot/tests"]


[tool.coverage.run]
branch = true
data_file = "coverage_reports/.coverage"
include = [
    "timetable_bot/src/*"
]
omit = [
    "*/__init__.py",
    "config.py",
    "main.py",
    "dummy.py"
]

[tool.coverage.html]
directory = "coverage_reports/html/"
